--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>Mod-Sauce Dev's</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+    <link rel="stylesheet" type="text/css" href="style.css"
   </head>
   <body>
     <h1>Test</h1>
