--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Mod-Sauce Dev's</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
-    <link rel="stylesheet" type="text/css" href="style.css"
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1>Mod-Sauce Dev's</h1>
