--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <title>Mod-Sauce Dev's</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+      body {
+        background-color: black;
+      }
+    </style>
   </head>
   <body>
     <h1>Mod-Sauce Dev's</h1>
