--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mod-Sauce Dev's</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <style>
-      body {
-        background-color: black;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Mod-Sauce Dev's</h1>
-  </body>
+</head>
+<body>
+    <div class="container">
+        <h1>Mod-Sauce Dev's</h1>
+    </div>
+    <p>Welcome to our website!</p>
+    <div class="container">
+        <button onclick="location.href='index.html'">Main</button>
+        <button onclick="location.href='about.html'">About</button>
+        <button onclick="location.href='#'">Projects</button>
+    </div>
+</body>
 </html>
