--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             color: white;
             font-family: Arial, sans-serif;
             margin: 0;
+            text-align: center;
         }
         .header {
             display: flex;
@@ -20,7 +21,6 @@
             padding: 15px 20px;
             background: black;
             border-bottom: 2px solid purple;
-            position: relative;
         }
         .logo {
             font-size: 24px;
@@ -29,7 +29,6 @@
         .nav {
             display: flex;
             gap: 15px;
-            position: relative;
         }
         .nav a {
             text-decoration: none;
@@ -42,33 +41,12 @@
         .nav a:hover {
             background: #800080;
         }
-        /* Dropdown Menu */
-        .dropdown {
-            position: relative;
-            display: inline-block;
-        }
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: black;
-            border: 2px solid purple;
-            min-width: 160px;
-            z-index: 1;
-            top: 40px;
-        }
-        .dropdown-content a {
-            display: block;
-            padding: 10px;
-            text-decoration: none;
-            color: white;
-            background: purple;
-            border-radius: 0;
-        }
-        .dropdown-content a:hover {
-            background: #800080;
-        }
-        .dropdown:hover .dropdown-content {
-            display: block;
+        .content {
+            margin-top: 50px;
+            padding: 20px;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
         }
     </style>
 </head>
@@ -78,14 +56,19 @@
         <nav class="nav">
             <a href="index.html">Main</a>
             <a href="about.html">About</a>
-            <div class="dropdown">
-                <a href="#">Projects ▼</a>
-                <div class="dropdown-content">
-                    <a href="impr.html">Project Impr</a>
-                    <a href="oer.html">Project Oer</a>
-                </div>
-            </div>
+            <a href="#">Projects ▼</a>
         </nav>
+    </div>
+    <div class="content">
+        <h1>Welcome to Mod-Sauce Dev's</h1>
+        <p>Hello and welcome to our website! Here you can find our projects and learn more about what we do as Minecraft mod developers.</p>
+        <p>Visit our Projects page to explore our mods, or check out the About page to learn more about us.</p>
+        <h2>What We Do</h2>
+        <p>We specialize in repairing and updating Minecraft mods that are no longer being developed. Our goal is to bring old mods back to life and ensure they remain compatible with newer versions of the game.</p>
+        <p>Our team is dedicated to keeping these mods functional and improving them where possible while staying true to their original vision.</p>
+        <h2>Stay Connected</h2>
+        <p>Join our <a href="https://discord.gg/VNrzdd5ErJ">Discord server</a> to stay updated on new releases, discuss modding, and connect with our community.</p>
+        <p>We appreciate your support and look forward to bringing more mods back to life!</p>
     </div>
 </body>
 </html>
