--- a/about.html
+++ b/about.html
@@ -13,6 +13,9 @@
         ul {
             font-size: 30px;
         }
+        h2 {
+            font-size: 50px;
+        }
         body {
             background-color: black;
             color: white;
