--- a/impr.html
+++ b/impr.html
@@ -7,6 +7,12 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
+        h2 {
+            font-size: 45px;
+        }
+        ul {
+            font-size: 30px;
+        }
         body {
             background-color: black;
             color: white;
