--- a/impr.html
+++ b/impr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IMP - Mod-Sauce Dev's</title>
+    <title>IMPR - Mod-Sauce Dev's</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
@@ -161,11 +161,11 @@
         </nav>
     </div>
     <div class="content">
-        <h1>IMP (Iam Music Player Renewed)</h1>
-        <p>IMP, or Iam Music Player Renewed, is our revived and updated version of the classic Iam Music Player mod for Minecraft. We've taken the original mod and brought it back to life, ensuring it's compatible with modern Minecraft versions.</p>
+        <h1>IMPR (Iam Music Player Renewed)</h1>
+        <p>IMPR, or Iam Music Player Renewed, is our revived and updated version of the classic Iam Music Player mod for Minecraft. We've taken the original mod and brought it back to life, ensuring it's compatible with modern Minecraft versions.</p>
         <h2>About Iam Music Player</h2>
         <p>The original Iam Music Player allowed players to add and play custom music within Minecraft. It was a beloved mod that added a new layer of immersion to the game. However, it was no longer maintained and became incompatible with newer versions.</p>
-        <h2>IMP's Features</h2>
+        <h2>IMPR's Features</h2>
         <ul>
             <li><strong>Custom Music Playback:</strong> Easily add and play your favorite music in-game.</li>
             <li><strong>Continued Support:</strong> We are committed to maintaining and updating IMP.</li>
@@ -173,8 +173,8 @@
         <h2>Our Goal</h2>
         <p>Our goal with IMP is to bring back the joy of custom music to Minecraft players. We want to ensure that this fantastic mod continues to be available for everyone to enjoy.</p>
         <h2>Download and Support</h2>
-        <p>Stay tuned for download links and updates. Join our <a href="https://discord.gg/VNrzdd5ErJ">Discord server</a> for support, feedback, and to stay updated on IMP's development.</p>
-        <p>Thank you for supporting IMP!</p>
+        <p>Stay tuned for download links and updates. Join our <a href="https://discord.gg/VNrzdd5ErJ">Discord server</a> for support, feedback, and to stay updated on IMPR's development.</p>
+        <p>Thank you for supporting IMPR!</p>
     </div>
     <script>
         const mobileMenu = document.querySelector('.mobile-menu');
