--- a/oer.html
+++ b/oer.html
@@ -7,6 +7,9 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
+        h2 {
+            font-size: 45px;
+        }
         body {
             background-color: black;
             color: white;
