--- a/index.html
+++ b/index.html
@@ -7,13 +7,29 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
+        @font-face {
+            font-family: 'RaelaGrotesque';
+            src: url('fonts/RaelaGrotesque-Regular.ttf') format('truetype');
+            font-weight: normal;
+            font-style: normal;
+        }
+        @font-face {
+            font-family: 'JazzyRabbit';
+            src: url('fonts/JazzyRabbit.ttf') format('truetype');
+            font-weight: normal;
+            font-style: normal;
+        }
         h2 {
             font-size: 45px;
+            font-family: 'JazzyRabbit', Arial, sans-serif;
+        }
+        h1 {
+            font-family: 'JazzyRabbit', Arial, sans-serif;
         }
         body {
             background-color: black;
             color: white;
-            font-family: Arial, sans-serif;
+            font-family: 'RaelaGrotesque', Arial, sans-serif;
             margin: 0;
             text-align: center;
         }
