--- a/about.html
+++ b/about.html
@@ -46,6 +46,7 @@
             padding: 15px 20px;
             background: black;
             border-bottom: 2px solid purple;
+            font-family: 'JazzyRabbit', Arial, sans-serif;
         }
         .logo {
             display: flex;
