--- a/impr.html
+++ b/impr.html
@@ -43,6 +43,7 @@
             padding: 15px 20px;
             background: black;
             border-bottom: 2px solid purple;
+            font-family: 'JazzyRabbit', Arial, sans-serif;
         }
         .logo {
             display: flex;
