--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             padding: 15px 20px;
             background: black;
             border-bottom: 2px solid purple;
+            font-family: 'JazzyRabbit', Arial, sans-serif;
         }
         .logo {
             display: flex;
