--- a/about.html
+++ b/about.html
@@ -194,6 +194,8 @@
         </ul>
         <h2>Our Team</h2>
         <p>We are a small, dedicated team of developers with a shared love for Minecraft and its modding community. We are committed to providing high-quality, reliable mods for everyone to enjoy.</p>
+        <a href="https://github.com/Mooo0042"><p>Us3r0</p></a>
+        <a href="https://github.com/Shadowbee27"><p>Shadowbee</p></a>
         <h2>Get Involved</h2>
         <p>If you're interested in contributing or have any questions, feel free to join our <a href="https://discord.gg/VNrzdd5ErJ">Discord server</a>. We welcome feedback, suggestions, and contributions from the community.</p>
         <p>Thank you for your support!</p>
