--- a/impr.html
+++ b/impr.html
@@ -190,7 +190,8 @@
         <h2>Our Goal</h2>
         <p>Our goal with IMP is to bring back the joy of custom music to Minecraft players. We want to ensure that this fantastic mod continues to be available for everyone to enjoy.</p>
         <h2>Download and Support</h2>
-        <p>Stay tuned for download links and updates. Join our <a href="https://discord.gg/VNrzdd5ErJ">Discord server</a> for support, feedback, and to stay updated on IMPR's development.</p>
+        <p>You can find the Mod on <a href="https://modrinth.com/mod/iam-music-player-renewed">Modrinth</a> and <a href="https://www.curseforge.com/minecraft/mc-mods/iammusicplayer-renewed">Curseforge</a> </p>
+        <p>Join our <a href="https://discord.gg/VNrzdd5ErJ">Discord server</a> for support, feedback, and to stay updated on IMPR's development.</p>
         <p>Thank you for supporting IMPR!</p>
     </div>
     <script>
