--- a/oer.html
+++ b/oer.html
@@ -6,6 +6,9 @@
     <title>OER - Mod-Sauce Dev's</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
     <style>
         @font-face {
             font-family: 'RaelaGrotesque';
@@ -29,7 +32,9 @@
         body {
             background-color: black;
             color: white;
-            font-family: 'RaelaGrotesque', Arial, sans-serif;
+            font-family: "Major Mono Display", monospace;
+            font-weight: 400;
+            font-style: normal;
             margin: 0;
             text-align: center;
         }
