--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@
             <div class="bar"></div>
         </div>
         <nav class="nav">
-            <a href="index.html">Main</a>
+            <button href="index.html">Main</button>
             <a href="about.html">About</a>
             <div class="dropdown">
                 <a href="#">Projects ▼</a>
