--- a/about.html
+++ b/about.html
@@ -90,6 +90,7 @@
         }
         .nav a:hover {
             background: black;
+            border: purple;
         }
         .dropdown {
             position: relative;
